src/scss/HomePage.scss
.home-page {
  color: white;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAAG0lEQVQYV2P8XxUkyYADMIIkGdvWPccmP+gkAZZsGexuFgK2AAAAAElFTkSuQmCC);

  .banner {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 80px;
    font-weight: 100;
    height: 60vh;
    width: 60vh;
    border-radius: 50%;
    background-color: rgba(0,0,0,.3);
    overflow: hidden;
    box-shadow: inset 0px 0px 100px 0px rgba(0,0,0,.75),
    0px 0px 100px 0px coral;
  }

  .top-bar {
    height: 60px;
    width: 100vw;
    background-color: white;
    position: absolute;
    top: 0px;
    display: flex;
    align-items: center;
    justify-content: flex-end;

    .login-signup {
      color: rgba(0,0,0,.8);
      cursor: pointer;
      margin-right: 40px;
      background-color: transparent;
      border: 0px;
      transition: color .3s;
      padding-left: 40px;
      height: 100%;
      border-left: 1px solid rgba(0,0,0,.1);


      &:hover {
        color: coral;
      }

      &:focus {
        outline: none;
      }
    }

    .link-icon {
      color: rgba(0,0,0,.8);
      margin-right: 20px;
      font-size: 20px;
      transition: color .3s;

      &:hover {
        color: coral;
      }
    }
  }

  .form-visible {
    transform: translateY(0);
    position: absolute;
    bottom: 0px;
    z-index: 100;
    height: calc(100vh - 60px);
    width: 100vw;
    background-color: white;
    color: coral;
    display: flex;
    flex-align: center;
    justify-content: center;
    transition: transform .3s, opacity .3s;

    .login-signup-form {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      margin-top: -60px;

      .error-box {
        width: 300px;
        height: 60px;
        background-color: red;
        color: white;
        position: absolute;
        top: -60px;
        left: 0px;
        z-index: 200;
        display: flex;
        justify-content: center;
        align-items: center;
        transform: translateX(0px);
        transition: width .3s, transform .3s, color 1s;
      }

      .error-box-hidden {
        width: 0px;
        max-width: 0px;
        color: red;
        transform: translateX(-300px);
        transition: width .3s, transform .3s, color 1s;
      }

      button {
        cursor: pointer;
        width: 35vw;
        height: 40px;
        border: 1px solid coral;
        background-color: transparent;
        color: coral;
        transition: background-color, color, .3s;

        &:hover {
          background-color: coral;
          color: white;
        }
      }

      .submit-signup {
        margin-top: 20px;
      }

      input {
        border: 0px;
        border-bottom: 1px solid rgba(0,0,0,.1);
        height: 40px;
        width: 35vw;
        margin-bottom: 20px;
        font-size: 20px;
        font-weight: 100;

        &:focus {
          outline: 0px;
          border-bottom: 1px solid coral;
        }
      }
    }
  }

  .form-hidden {
    width: 0px;
    transform: translateY(100vh);
    opacity: 0;
  }
}

